--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@ under the License.
 		</dependency>
 		
 		<dependency>
+  			<groupId>org.apache.flink</groupId>
+  			<artifactId>flink-cep_2.11</artifactId>
+  			<version>1.9.0</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-streaming-java_${scala.binary.version}</artifactId>
 			<version>${flink.version}</version>
